--- a/agent.ipynb
+++ b/agent.ipynb
@@ -7,11 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import time\n",
+    "from gtts import gTTS\n",
+    "import speech_recognition as sr\n",
     "from langchain_mistralai import ChatMistralAI\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain_core.messages import AIMessage, HumanMessage\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "import os \n",
     "from langchain_chroma import Chroma\n",
     "from langchain_huggingface import HuggingFaceEmbeddings"
    ]
@@ -34,21 +36,59 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "946af7bd-33af-4f0f-8ed2-52d6d831f544",
+   "id": "b68dd131-e556-44ed-942b-6992618cec1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedder = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
-    "db = Chroma(persist_directory=\"./vector_db\", embedding_function=embedder)"
+    "def recognize_speech():\n",
+    "    recognizer = sr.Recognizer()\n",
+    "    with sr.Microphone() as source:\n",
+    "        print(\"Listening for your query...\")\n",
+    "        try:\n",
+    "            audio = recognizer.listen(source, timeout=5)\n",
+    "            user_input = recognizer.recognize_google(audio)\n",
+    "            print(f\"You said: {user_input}\")\n",
+    "            return user_input\n",
+    "        except sr.UnknownValueError:\n",
+    "            print(\"Sorry, I didn't catch that.\")\n",
+    "            return None\n",
+    "        except sr.WaitTimeoutError:\n",
+    "            print(\"You took too long to respond.\")\n",
+    "            return None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c0cc4a0d-ef83-4873-a706-c947f0a759f0",
+   "id": "946af7bd-33af-4f0f-8ed2-52d6d831f544",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def speak_text(text):\n",
+    "    tts = gTTS(text=text, lang='en')\n",
+    "    tts.save(\"response.mp3\")\n",
+    "    os.system(\"start response.mp3\" if os.name == \"nt\" else \"afplay response.mp3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c0cc4a0d-ef83-4873-a706-c947f0a759f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "B:\\Software\\Anaconda\\envs\\predixion\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "embedder = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
+    "db = Chroma(persist_directory=\"./vector_db\", embedding_function=embedder)\n",
+    "\n",
     "def get_response(user_query, doc_context):\n",
     "    llm_query_res_template = \"\"\"\n",
     "        Answer the question based on the context below. If the question cannot be answered using the information provided, reply with \"I don't know\". Also, make sure to answer the following questions considering the history of the conversation:\n",
@@ -90,70 +130,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bc73ef18-99ab-4f06-b984-758715f73695",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def chatbot(user):\n",
+    "def chatbot():\n",
+    "    print(\"Voice-enabled Chatbot is now running! Say 'quit' to exit.\")\n",
     "    while True:\n",
-    "        user_query = input(f'{user}: ')\n",
+    "        user_query = recognize_speech()\n",
+    "        if not user_query:\n",
+    "            continue\n",
     "        if user_query.lower() == \"quit\":\n",
+    "            print(\"Goodbye!\")\n",
     "            break\n",
     "\n",
-    "        doc_context = '\\n'.join([doc.page_content for doc in db.max_marginal_relevance_search(user_query,k=2,fetch_k=10)])\n",
+    "        doc_context = '\\n'.join([doc.page_content for doc in db.max_marginal_relevance_search(user_query, k=2, fetch_k=10)])\n",
     "        response = get_response(user_query=user_query, doc_context=doc_context)\n",
-    "        \n",
-    "        print(f'Bot: {response}')"
+    "\n",
+    "        print(f'Bot: {response}')\n",
+    "        speak_text(response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "269b14fa-b5a3-4553-8395-5c5e85d85f72",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Shreyas:  Hello how can you help me\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "B:\\Software\\Anaconda\\envs\\predixion\\lib\\site-packages\\transformers\\models\\bert\\modeling_bert.py:440: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
-      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bot: Hello! I'm here to help you manage your loan repayments. How can I assist you today with your loan?\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m----> 2\u001b[0m     \u001b[43mchatbot\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mShreyas\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[5], line 3\u001b[0m, in \u001b[0;36mchatbot\u001b[1;34m(user)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mchatbot\u001b[39m(user):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m----> 3\u001b[0m         user_query \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43muser\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m: \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m user_query\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquit\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m      5\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "File \u001b[1;32mB:\\Software\\Anaconda\\envs\\predixion\\lib\\site-packages\\ipykernel\\kernelbase.py:1262\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1260\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1261\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[1;32m-> 1262\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1263\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1264\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1265\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1266\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m   1267\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mB:\\Software\\Anaconda\\envs\\predixion\\lib\\site-packages\\ipykernel\\kernelbase.py:1305\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1302\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1303\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m   1304\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1305\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1306\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1307\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+      "Voice-enabled Chatbot is now running! Say 'quit' to exit.\n",
+      "Listening for your query...\n",
+      "You said: hello I have a question\n",
+      "Bot: Hello! I'm here to help with your loan repayment questions. What would you like to know?\n",
+      "Listening for your query...\n",
+      "You took too long to respond.\n",
+      "Listening for your query...\n",
+      "You said: give me a summary of the policies\n",
+      "Bot: I don't know. Let's focus on your loan repayment. How can I assist you with your loan today?\n",
+      "Listening for your query...\n",
+      "You took too long to respond.\n",
+      "Listening for your query...\n",
+      "You said: quit\n",
+      "Goodbye!\n"
      ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    chatbot(\"Shreyas\")"
+    "    chatbot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5c766ca-8a57-4430-883c-3ddafb8b4a0d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -172,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
